--- a/notebooks/figures/dataset_stats.ipynb
+++ b/notebooks/figures/dataset_stats.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,64 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['person occupation',\n",
-       " 'adjective antonym',\n",
-       " 'person mother',\n",
-       " 'country capital city',\n",
-       " 'plays pro sport',\n",
-       " 'star constellation name',\n",
-       " 'person plays instrument',\n",
-       " 'person university',\n",
-       " 'city in country',\n",
-       " 'food from country',\n",
-       " 'occupation gender',\n",
-       " 'occupation age',\n",
-       " 'name gender',\n",
-       " 'company hq',\n",
-       " 'word first letter',\n",
-       " 'country language',\n",
-       " 'object superclass',\n",
-       " 'name religion',\n",
-       " 'fruit outside color',\n",
-       " 'superhero archnemesis',\n",
-       " 'work location',\n",
-       " 'person lead singer of band',\n",
-       " 'landmark on continent',\n",
-       " 'characteristic gender',\n",
-       " 'country largest city',\n",
-       " 'country currency',\n",
-       " 'fruit inside color',\n",
-       " 'task done by tool',\n",
-       " 'verb past tense',\n",
-       " 'pokemon evolution',\n",
-       " 'product by company',\n",
-       " 'name birthplace',\n",
-       " 'word last letter',\n",
-       " 'word sentiment',\n",
-       " 'landmark in country',\n",
-       " 'company CEO',\n",
-       " 'superhero person',\n",
-       " 'person father',\n",
-       " 'substance phase of matter',\n",
-       " 'adjective superlative',\n",
-       " 'person sport position',\n",
-       " 'adjective comparative',\n",
-       " 'univ degree gender',\n",
-       " 'task person type',\n",
-       " 'person native language']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from src.utils.sweep_utils import read_sweep_results\n",
     "\n",
@@ -138,40 +92,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping president birth year -- not found for llama-13b\n",
-      "Skipping president election year -- not found for llama-13b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(\"stats/data.json\", \"r\") as f:\n",
-    "    stats = json.load(f)\n",
+    "# with open(\"stats/data.json\", \"r\") as f:\n",
+    "#     stats = json.load(f)\n",
     "\n",
-    "for relation in stats:\n",
-    "    if relation not in sweep_results:\n",
-    "        stats[relation][model_name] = f\"--\"\n",
-    "        print(f\"Skipping {relation} -- not found for {model_name}\")\n",
-    "        continue\n",
-    "    trail_tests = np.array([\n",
-    "        trial[\"n_test_samples\"] \n",
-    "        for trial in sweep_results[relation][\"trials\"]\n",
-    "    ])\n",
-    "    if len(trail_tests) < (3 if model_name != \"llama-13b\" else 2):\n",
-    "        stats[relation][model_name] = f\"--\"\n",
-    "        print(f\"Skipping {relation} -- not enough trials for {model_name}\")\n",
-    "        continue\n",
-    "    else:\n",
-    "        stats[relation][model_name] = f\"{trail_tests.mean() :.2f} \\pm {trail_tests.std() :.2f}\"\n",
+    "# for relation in stats:\n",
+    "#     if relation not in sweep_results:\n",
+    "#         stats[relation][model_name] = f\"--\"\n",
+    "#         print(f\"Skipping {relation} -- not found for {model_name}\")\n",
+    "#         continue\n",
+    "#     trail_tests = np.array([\n",
+    "#         trial[\"n_test_samples\"] \n",
+    "#         for trial in sweep_results[relation][\"trials\"]\n",
+    "#     ])\n",
+    "#     # if len(trail_tests) < (3 if model_name != \"llama-13b\" else 2):\n",
+    "#     #     stats[relation][model_name] = f\"--\"\n",
+    "#     #     print(f\"Skipping {relation} -- not enough trials for {model_name}\")\n",
+    "#     #     continue\n",
+    "#     # else:\n",
+    "#     stats[relation][model_name] = f\"{trail_tests.mean() :.2f} \\pm {trail_tests.std() :.2f}\"\n",
     "\n",
-    "with open(\"stats/data.json\", \"w\") as f:\n",
-    "    json.dump(stats, f, indent=2)"
+    "# with open(\"stats/data.json\", \"w\") as f:\n",
+    "#     json.dump(stats, f, indent=2)"
    ]
   },
   {
@@ -183,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_decimal(result):\n",
+    "    if result == \"--\":\n",
+    "        return result\n",
+    "    mean, std = result.split(\" \\pm \")\n",
+    "    mean = float(mean)\n",
+    "    std = float(std)\n",
+    "    return f\"{mean:.1f} \\pm {std:.1f}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -201,13 +161,13 @@
      "output_type": "stream",
      "text": [
       "7\n",
-      "& occupation age & $45$ & $25.67 \\pm 2.62$ & $22.88 \\pm 3.82$ & $32.79 \\pm 2.63$ \\\\ \n",
-      "& univ degree gender & $38$ & $--$ & $21.50 \\pm 2.38$ & $24.17 \\pm 2.41$ \\\\ \n",
-      "& name birthplace & $31$ & $17.09 \\pm 2.59$ & $18.04 \\pm 1.43$ & $21.38 \\pm 1.11$ \\\\ \n",
-      "& name religion & $31$ & $16.96 \\pm 2.26$ & $15.08 \\pm 2.23$ & $19.83 \\pm 1.49$ \\\\ \n",
-      "& characteristic gender & $30$ & $15.88 \\pm 2.71$ & $15.76 \\pm 2.16$ & $19.67 \\pm 1.18$ \\\\ \n",
-      "& name gender & $19$ & $11.00 \\pm 0.00$ & $10.71 \\pm 0.61$ & $10.79 \\pm 0.41$ \\\\ \n",
-      "& occupation gender & $19$ & $9.60 \\pm 0.80$ & $9.78 \\pm 0.66$ & $10.79 \\pm 0.41$ \\\\ \n",
+      "& occupation age & $45$ & $25.7 \\pm 2.6$ & $22.9 \\pm 3.8$ & $32.8 \\pm 2.6$ \\\\ \n",
+      "& univ degree gender & $38$ & $--$ & $21.5 \\pm 2.4$ & $24.2 \\pm 2.4$ \\\\ \n",
+      "& name birthplace & $31$ & $17.1 \\pm 2.6$ & $18.0 \\pm 1.4$ & $21.4 \\pm 1.1$ \\\\ \n",
+      "& name religion & $31$ & $17.0 \\pm 2.3$ & $15.1 \\pm 2.2$ & $19.8 \\pm 1.5$ \\\\ \n",
+      "& characteristic gender & $30$ & $15.9 \\pm 2.7$ & $15.8 \\pm 2.2$ & $19.7 \\pm 1.2$ \\\\ \n",
+      "& name gender & $19$ & $11.0 \\pm 0.0$ & $10.7 \\pm 0.6$ & $10.8 \\pm 0.4$ \\\\ \n",
+      "& occupation gender & $19$ & $9.6 \\pm 0.8$ & $9.8 \\pm 0.7$ & $10.8 \\pm 0.4$ \\\\ \n",
       "\\hline\n"
      ]
     }
@@ -227,9 +187,52 @@
     "for relation in category_stats:\n",
     "    relation_stats = relation\n",
     "    relation_name = relation_stats[\"name\"]\n",
-    "    print(f\"& {relation_name} & ${relation_stats['num_samples']}$ & ${relation_stats['gptj']}$ & ${relation_stats['gpt2-xl']}$ & ${relation_stats['llama-13b']}$ \\\\\\\\ \")\n",
+    "    gptj_count = change_decimal(relation_stats[\"gptj\"])\n",
+    "    gpt2_count = change_decimal(relation_stats[\"gpt2-xl\"])\n",
+    "    llama_count = change_decimal(relation_stats[\"llama-13b\"])\n",
+    "    print(f\"& {relation_name} & ${relation_stats['num_samples']}$ & ${gptj_count}$ & ${gpt2_count}$ & ${llama_count}$ \\\\\\\\ \")\n",
     "print(\"\\\\hline\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9.6 \\\\pm 0.8'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "change_decimal(relation_stats['gptj'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9.60 \\\\pm 0.80'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
