--- a/notebooks/figures/dataset_stats.ipynb
+++ b/notebooks/figures/dataset_stats.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,25 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "& occupation age & $45$ & $25.7 \\pm 2.6$ & $22.9 \\pm 3.8$ & $32.8 \\pm 2.6$ \\\\ \n",
-      "& univ degree gender & $38$ & $--$ & $21.5 \\pm 2.4$ & $24.2 \\pm 2.4$ \\\\ \n",
-      "& name birthplace & $31$ & $17.1 \\pm 2.6$ & $18.0 \\pm 1.4$ & $21.4 \\pm 1.1$ \\\\ \n",
-      "& name religion & $31$ & $17.0 \\pm 2.3$ & $15.1 \\pm 2.2$ & $19.8 \\pm 1.5$ \\\\ \n",
-      "& characteristic gender & $30$ & $15.9 \\pm 2.7$ & $15.8 \\pm 2.2$ & $19.7 \\pm 1.2$ \\\\ \n",
-      "& name gender & $19$ & $11.0 \\pm 0.0$ & $10.7 \\pm 0.6$ & $10.8 \\pm 0.4$ \\\\ \n",
-      "& occupation gender & $19$ & $9.6 \\pm 0.8$ & $9.8 \\pm 0.7$ & $10.8 \\pm 0.4$ \\\\ \n",
-      "\\hline\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "category = \"bias\"\n",
     "category_stats = [\n",
@@ -179,6 +154,9 @@
     "    for relation in stats \n",
     "    if stats[relation][\"category\"] == category\n",
     "]\n",
+    "\n",
+    "gpt_j_correct_count = 0\n",
+    "num_samples = 0\n",
     "\n",
     "category_stats = sorted(\n",
     "    category_stats, key=lambda x: x[\"num_samples\"], reverse=True\n",
@@ -191,48 +169,15 @@
     "    gpt2_count = change_decimal(relation_stats[\"gpt2-xl\"])\n",
     "    llama_count = change_decimal(relation_stats[\"llama-13b\"])\n",
     "    print(f\"& {relation_name} & ${relation_stats['num_samples']}$ & ${gptj_count}$ & ${gpt2_count}$ & ${llama_count}$ \\\\\\\\ \")\n",
-    "print(\"\\\\hline\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'9.6 \\\\pm 0.8'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "\n",
+    "    num_samples += relation_stats[\"num_samples\"]\n",
+    "    if gptj_count != \"--\":\n",
+    "        gpt_j_correct_count += float(gptj_count.split(\" \\pm \")[0])\n",
     "\n",
-    "change_decimal(relation_stats['gptj'])"
+    "print(\"\\\\hline\")\n",
+    "\n",
+    "len(category_stats), num_samples, f\"{gpt_j_correct_count:.1f}\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'9.60 \\\\pm 0.80'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
