functions for saving and loading order 1 approx

--- a/notebooks/mamba_support.ipynb
+++ b/notebooks/mamba_support.ipynb
@@ -1428,8 +1428,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "d14acef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.functional import save_linear_operator\n",
+    "\n",
+    "save_linear_operator(\n",
+    "    approx = operator,\n",
+    "    file_name = \"lre_capital\",\n",
+    "    path = \"cached\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f1cbbdde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator_loaded = functional.load_cached_linear_operator(mt = mt, file_path = \"cached/lre_capital.npz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a2069b",
    "metadata": {},
    "outputs": [],
    "source": []
