--- a/notebooks/interpolation_experiment.ipynb
+++ b/notebooks/interpolation_experiment.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.interpolation import save_order_1_approx, normalize_on_sphere"
+    "from src.functional import save_order_1_approx, normalize_on_sphere"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
