tested sweep parsing code

--- a/notebooks/figures/sweep_results.ipynb
+++ b/notebooks/figures/sweep_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "############################################\n",
-    "sweep_root = \"../../results/sweep-24-trials\"\n",
+    "sweep_root = \"../../results/SWEEP\"\n",
     "# sweep_root = \"../../results/sweep-bare\"\n",
-    "model_name = \"gptj\"\n",
+    "model_name = \"mamba-3b\"\n",
     "############################################\n",
     "\n",
-    "sweep_path = f\"{sweep_root}/{model_name}\""
+    "sweep_path = os.path.join(sweep_root, model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['country capital city']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sweep_results = read_sweep_results(sweep_path, economy=True)\n",
     "list(sweep_results.keys())"
@@ -87,53 +98,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# relation_name = \"plays pro sport\"\n",
-    "# relation_result = relation_from_dict(sweep_results[relation_name])\n",
+    "relation_name = \"country capital city\"\n",
+    "relation_result = relation_from_dict(sweep_results[relation_name])\n",
     "# relation_result_bare = relation_from_dict(sweep_results_bare[relation_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best by efficacy =>  layer=26, beta=4.90, rank=93\n",
+      "recall: 0.78 ± 0.01\n",
+      "efficacy: 1.00 ± 0.00\n",
+      "-------------------------------------------------------------\n",
+      "best by faithfulness => layer=40, beta=3.38, rank=62\n",
+      "recall: 0.83 ± 0.01\n",
+      "efficacy: 0.95 ± 0.01\n"
+     ]
+    }
+   ],
    "source": [
-    "# efficacy = relation_result.best_by_efficacy()\n",
-    "# print(f\"best by efficacy =>  layer={efficacy.layer}, beta={efficacy.beta.mean:.2f}, rank={efficacy.rank.mean:.0f}\")\n",
-    "# print(\"recall:\", efficacy.recall)\n",
-    "# print(\"efficacy:\", efficacy.efficacy)\n",
+    "efficacy = relation_result.best_by_efficacy()\n",
+    "print(f\"best by efficacy =>  layer={efficacy.layer}, beta={efficacy.beta.mean:.2f}, rank={efficacy.rank.mean:.0f}\")\n",
+    "print(\"recall:\", efficacy.recall)\n",
+    "print(\"efficacy:\", efficacy.efficacy)\n",
     "\n",
-    "# print(\"-------------------------------------------------------------\")\n",
+    "print(\"-------------------------------------------------------------\")\n",
     "\n",
-    "# faithfulness = relation_result.best_by_faithfulness()\n",
-    "# print(f\"best by faithfulness => layer={faithfulness.layer}, beta={faithfulness.beta.mean:.2f}, rank={faithfulness.rank.mean:.0f}\")\n",
-    "# print(\"recall:\", faithfulness.recall)\n",
-    "# print(\"efficacy:\", faithfulness.efficacy)"
+    "faithfulness = relation_result.best_by_faithfulness()\n",
+    "print(f\"best by faithfulness => layer={faithfulness.layer}, beta={faithfulness.beta.mean:.2f}, rank={faithfulness.rank.mean:.0f}\")\n",
+    "print(\"recall:\", faithfulness.recall)\n",
+    "print(\"efficacy:\", faithfulness.efficacy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best by efficacy =>  layer=26, beta=5.00, rank=93\n",
+      "recall: 0.75 ± 0.02\n",
+      "efficacy: 1.00 ± 0.00\n",
+      "-------------------------------------------------------------\n",
+      "best by faithfulness => layer=28, beta=5.00, rank=96\n",
+      "recall: 0.77 ± 0.01\n",
+      "efficacy: 0.99 ± 0.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# beta = 2.25\n",
+    "beta = 5\n",
     "\n",
-    "# efficacy = relation_result.best_by_efficacy(beta = beta)\n",
-    "# print(f\"best by efficacy =>  layer={efficacy.layer}, beta={efficacy.beta.mean:.2f}, rank={efficacy.rank.mean:.0f}\")\n",
-    "# print(\"recall:\", efficacy.recall)\n",
-    "# print(\"efficacy:\", efficacy.efficacy)\n",
+    "efficacy = relation_result.best_by_efficacy(beta = beta)\n",
+    "print(f\"best by efficacy =>  layer={efficacy.layer}, beta={efficacy.beta.mean:.2f}, rank={efficacy.rank.mean:.0f}\")\n",
+    "print(\"recall:\", efficacy.recall)\n",
+    "print(\"efficacy:\", efficacy.efficacy)\n",
     "\n",
-    "# print(\"-------------------------------------------------------------\")\n",
+    "print(\"-------------------------------------------------------------\")\n",
     "\n",
-    "# faithfulness = relation_result.best_by_faithfulness(beta = beta)\n",
-    "# print(f\"best by faithfulness => layer={faithfulness.layer}, beta={faithfulness.beta.mean:.2f}, rank={faithfulness.rank.mean:.0f}\")\n",
-    "# print(\"recall:\", faithfulness.recall)\n",
-    "# print(\"efficacy:\", faithfulness.efficacy)"
+    "faithfulness = relation_result.best_by_faithfulness(beta = beta)\n",
+    "print(f\"best by faithfulness => layer={faithfulness.layer}, beta={faithfulness.beta.mean:.2f}, rank={faithfulness.rank.mean:.0f}\")\n",
+    "print(\"recall:\", faithfulness.recall)\n",
+    "print(\"efficacy:\", faithfulness.efficacy)"
    ]
   },
   {
@@ -1147,7 +1186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
