--- a/notebooks/pythia_support.ipynb
+++ b/notebooks/pythia_support.ipynb
@@ -1353,8 +1353,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7fe27e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layers = None\n",
+    "\n",
+    "isinstance(layers, list) and len(layers) > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a25b74",
    "metadata": {},
    "outputs": [],
    "source": []
