--- a/notebooks/mamba_support.ipynb
+++ b/notebooks/mamba_support.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "5b360b04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "21f696b3",
    "metadata": {},
    "outputs": [
@@ -32,16 +23,6 @@
      "text": [
       "/home/local_arnab/miniconda3/envs/fact/bin/python\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
     }
    ],
    "source": [
@@ -50,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "115a4228",
    "metadata": {},
    "outputs": [
@@ -60,7 +41,7 @@
        "('1.13.1+cu117', '11.7')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "6f54a334",
    "metadata": {},
    "outputs": [],
@@ -96,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "9d46d0c3",
    "metadata": {},
    "outputs": [
@@ -104,19 +85,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-02-12 13:59:00 src.models INFO     loading state-spaces/mamba-2.8b-slimpj (device=cuda:0, fp16=False)\n",
-      "2024-02-12 13:59:00 urllib3.connectionpool DEBUG    Resetting dropped connection: huggingface.co\n"
+      "2024-02-19 14:20:52 src.models INFO     loading state-spaces/mamba-2.8b-slimpj (device=cuda:0, fp16=False)\n",
+      "2024-02-19 14:20:52 urllib3.connectionpool DEBUG    Starting new HTTPS connection (1): huggingface.co:443\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-02-12 13:59:00 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /state-spaces/mamba-2.8b-slimpj/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "2024-02-12 13:59:00 root WARNING  !!! turning off fused_add_norm for to avoid using Triton !!! CAIS cluster can't import triton functions (temporary patch)\n",
-      "2024-02-12 13:59:00 mamba.mamba_ssm.models.mixer_seq_simple INFO     {'d_model': 2560, 'n_layer': 64, 'vocab_size': 50277, 'ssm_cfg': {}, 'rms_norm': True, 'residual_in_fp32': True, 'fused_add_norm': False, 'pad_vocab_size_multiple': 8}\n",
-      "2024-02-12 13:59:18 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /state-spaces/mamba-2.8b-slimpj/resolve/main/pytorch_model.bin HTTP/1.1\" 302 0\n",
-      "2024-02-12 13:59:24 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /EleutherAI/gpt-neox-20b/resolve/main/tokenizer_config.json HTTP/1.1\" 200 0\n"
+      "2024-02-19 14:20:52 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /state-spaces/mamba-2.8b-slimpj/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      "2024-02-19 14:20:52 root WARNING  !!! turning off fused_add_norm for to avoid using Triton !!! CAIS cluster can't import triton functions (temporary patch)\n",
+      "2024-02-19 14:20:52 mamba.mamba_ssm.models.mixer_seq_simple INFO     {'d_model': 2560, 'n_layer': 64, 'vocab_size': 50277, 'ssm_cfg': {}, 'rms_norm': True, 'residual_in_fp32': True, 'fused_add_norm': False, 'pad_vocab_size_multiple': 8}\n",
+      "2024-02-19 14:21:10 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /state-spaces/mamba-2.8b-slimpj/resolve/main/pytorch_model.bin HTTP/1.1\" 302 0\n",
+      "2024-02-19 14:21:20 urllib3.connectionpool DEBUG    https://huggingface.co:443 \"HEAD /EleutherAI/gpt-neox-20b/resolve/main/tokenizer_config.json HTTP/1.1\" 200 0\n"
      ]
     },
     {
@@ -130,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-02-12 13:59:24 src.models INFO     dtype: torch.float32, device: cuda:0, memory: 10.31 GB\n"
+      "2024-02-19 14:21:20 src.models INFO     dtype: torch.float32, device: cuda:0, memory: 10.31 GB\n"
      ]
     }
    ],
@@ -138,27 +119,6 @@
     "device = \"cuda:0\"\n",
     "mt = models.load_model(\"mamba-3b\", device=device, fp16=False)\n",
     "# mt = models.load_model(\"gptj\", device=device, fp16=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "9bd5c119",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'backbone.embedding'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "models.determine_embedding_layer_path(mt)"
    ]
   },
   {
